// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render ansible removal modal render closed ansible removal modal 1`] = `
<AcmModal
  actions={
    Array [
      <AcmButton
        onClick={[MockFunction]}
        variant="danger"
      >
        Delete automation
      </AcmButton>,
      <AcmButton
        onClick={[MockFunction]}
        variant="link"
      >
        Cancel
      </AcmButton>,
    ]
  }
  id="remove-ansible-modal"
  isOpen={false}
  onClose={[MockFunction]}
  showClose={true}
  title="Permanetly delete policy violation automation?"
  titleIconVariant="warning"
  variant="medium"
>
  If you delete {0}, you will permanetly lose all of its information.
</AcmModal>
`;

exports[`render ansible removal modal render closed ansible removal modal without policy automation name 1`] = `
<AcmModal
  actions={
    Array [
      <AcmButton
        onClick={[MockFunction]}
        variant="danger"
      >
        Delete automation
      </AcmButton>,
      <AcmButton
        onClick={[MockFunction]}
        variant="link"
      >
        Cancel
      </AcmButton>,
    ]
  }
  id="remove-ansible-modal"
  isOpen={true}
  onClose={[MockFunction]}
  showClose={true}
  title="Permanetly delete policy violation automation?"
  titleIconVariant="warning"
  variant="medium"
>
  If you delete {0}, you will permanetly lose all of its information.
</AcmModal>
`;

exports[`render ansible removal modal render opened ansible removal modal 1`] = `
<AcmModal
  actions={
    Array [
      <AcmButton
        onClick={[MockFunction]}
        variant="danger"
      >
        Delete automation
      </AcmButton>,
      <AcmButton
        onClick={[MockFunction]}
        variant="link"
      >
        Cancel
      </AcmButton>,
    ]
  }
  id="remove-ansible-modal"
  isOpen={true}
  onClose={[MockFunction]}
  showClose={true}
  title="Permanetly delete policy violation automation?"
  titleIconVariant="warning"
  variant="medium"
>
  If you delete {0}, you will permanetly lose all of its information.
</AcmModal>
`;

exports[`render ansible removal modal render opened ansible removal modal without policy automation name 1`] = `
<AcmModal
  actions={
    Array [
      <AcmButton
        onClick={[MockFunction]}
        variant="danger"
      >
        Delete automation
      </AcmButton>,
      <AcmButton
        onClick={[MockFunction]}
        variant="link"
      >
        Cancel
      </AcmButton>,
    ]
  }
  id="remove-ansible-modal"
  isOpen={true}
  onClose={[MockFunction]}
  showClose={true}
  title="Permanetly delete policy violation automation?"
  titleIconVariant="warning"
  variant="medium"
>
  If you delete {0}, you will permanetly lose all of its information.
</AcmModal>
`;
